chore: preparing to test the image push

--- a/.github/workflows/build_leam_frappe_images.yaml
+++ b/.github/workflows/build_leam_frappe_images.yaml
@@ -65,7 +65,7 @@ jobs:
       with:
         context: .
         file: build/frappe-nginx/Dockerfile
-        push: false #${{ github.event_name != 'pull_request' }}
+        push: true #${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         secrets: |
