--- a/.github/workflows/build_leam_frappe_images.yaml
+++ b/.github/workflows/build_leam_frappe_images.yaml
@@ -31,7 +31,7 @@ jobs:
         tags: |
           type=semver,pattern={{version}}
           type=schedule,pattern={{date 'YYYYMMDD'}}
-          type=semver,pattern={{major}}.{{minor}}.{{patch}}
+          type=semver,pattern={{major}}.{{minor}}
         labels: |
           org.opencontainers.image.title=leam-frappe-nginx
           org.opencontainers.image.description=nginx image for leam frappe 
@@ -106,7 +106,7 @@ jobs:
         tags: |
           type=semver,pattern={{version}}
           type=schedule,pattern={{date 'YYYYMMDD'}}
-          type=semver,pattern={{major}}.{{minor}}.{{patch}}
+          type=semver,pattern={{major}}.{{minor}}
         
         labels: |
           org.opencontainers.image.title=leam-frappe-worker
