chore: testing the updated version of frappe_docker

--- a/.github/workflows/build_leam_frappe_images.yaml
+++ b/.github/workflows/build_leam_frappe_images.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: yaacine/frappe_docker  #TODO: change yaacine to leam-tech
-        ref: leam-fork
+        ref: sync-leam-fork
         token: ${{ secrets.MY_GIT_AUTH_TOKEN }} # `GH_PAT` is a secret that contains your PAT
         
 
