--- a/.github/workflows/build_leam_frappe_images.yaml
+++ b/.github/workflows/build_leam_frappe_images.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: leam-tech/frappe_docker
-        ref: sync-leam-fork
+        ref: version-13-fixes
         # token: ${{ secrets.MY_GIT_AUTH_TOKEN }} # `GH_PAT` is a secret that contains your PAT
         
 
@@ -26,7 +26,7 @@ jobs:
       with:
         # list of Docker images to use as base name for tags
         images: |
-          registry.romman.io/leam-frappe-nginx
+          leamtech.azurecr.io/leam-frappe-nginx
         # generate Docker tags based on the following events/attributes
         # TODO: make sure the patch number here is always at 0
         tags: |
@@ -56,9 +56,9 @@ jobs:
     - name: Login to self-hosted registry
       uses: docker/login-action@v1 
       with:
-        registry: registry.romman.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+        registry: leamtech.azurecr.io
+        username: ${{ secrets.AZURE_DOCKER_USERNAME }}
+        password: ${{ secrets.AZURE_DOCKER_TOKEN }}
 
     - name: Build and push
       id: docker_build
@@ -91,7 +91,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: leam-tech/frappe_docker 
-        ref: sync-leam-fork
+        ref: version-13-fixes
         # token: ${{ secrets.MY_GIT_AUTH_TOKEN }} # `GH_PAT` is a secret that contains your PAT
         
 
@@ -102,7 +102,7 @@ jobs:
         # list of Docker images to use as base name for tags
         images: |
           
-          registry.romman.io/leam-frappe-worker
+          leamtech.azurecr.io/leam-frappe-worker
         # generate Docker tags based on the following events/attributes
         # TODO: make sure the patch number here is always at 0
         tags: |
@@ -134,7 +134,7 @@ jobs:
     - name: Login to self-hosted registry
       uses: docker/login-action@v1 
       with:
-        registry: registry.romman.io
+        registry: leamtech.azurecr.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
 
