--- a/.github/workflows/build_leam_frappe_images.yaml
+++ b/.github/workflows/build_leam_frappe_images.yaml
@@ -135,8 +135,8 @@ jobs:
       uses: docker/login-action@v1 
       with:
         registry: leamtech.azurecr.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+        username: ${{ secrets.AZURE_DOCKER_USERNAME }}
+        password: ${{ secrets.AZURE_DOCKER_TOKEN }}
 
     - name: Build and push
       id: docker_build
